Add Allure annotations to RegistrationTests