@@ -1,17 +1,11 @@
 package tests;
 
-import io.qameta.allure.Epic;
-import io.qameta.allure.Feature;
-import io.qameta.allure.Owner;
+import io.qameta.allure.*;
 import models.registration.*;
-import net.datafaker.Faker;
 import org.junit.jupiter.api.*;
 
 import static io.qameta.allure.Allure.step;
-import static io.restassured.RestAssured.given;
 import static org.assertj.core.api.Assertions.assertThat;
-import static specs.BaseSpec.baseRequestSpec;
-import static specs.registration.RegistrationSpec.*;
 import static tests.TestData.expectedError;
 import static tests.TestData.expectedErrorPass;
 
@@ -25,33 +19,24 @@ public class RegistrationTests extends TestBase {
 
     @BeforeEach
     public void prepareTestData() {
-        Faker faker = new Faker();
-        long timestamp = System.currentTimeMillis();
-        username = faker.name().firstName() + timestamp;
-        password = faker.name().firstName() + timestamp;
+
+        username = "user_" + System.currentTimeMillis();
+        password = "pass_" + System.currentTimeMillis();
     }
 
     @Test
+    @Description("POST регистрации с уникальными username/password: id > 0, поля профиля в ожидаемом виде, remoteAddr соответствует regexp.")
     @DisplayName("Успешная регистрация нового пользователя")
     @Tags({
             @Tag("regression"),
             @Tag("smoke"),
             @Tag("positive")
     })
+    @Severity(SeverityLevel.CRITICAL)
     public void successfulRegistrationTests() {
 
         RegistrationBodyModel registrationData = new RegistrationBodyModel(username, password);
-        SuccessfulRegistrationResponseModel registrationResponse = step(
-                "Регистрация нового пользователя по логину и паролю", () ->
-                        given(baseRequestSpec)
-                                .body(registrationData)
-                                .when()
-                                .post("/users/register/")
-                                .then()
-                                .spec(successfulRegistrationResponseSpec)
-                                .extract()
-                                .as(SuccessfulRegistrationResponseModel.class)
-        );
+        SuccessfulRegistrationResponseModel registrationResponse = api.users.register(registrationData);
 
         step("Валидация ответа регистрации", () -> {
             assertThat(registrationResponse.username())
@@ -77,117 +62,76 @@ public class RegistrationTests extends TestBase {
     }
 
     @Test
+    @Description("POST /users/register/ с уже существующим username: возвращается ошибка с детализацией")
     @DisplayName("Попытка регистрации с уже существующим username")
     @Tags({
             @Tag("regression"),
             @Tag("negative")
     })
+    @Severity(SeverityLevel.NORMAL)
     public void existingUserTest() {
         RegistrationBodyModel registrationData = new RegistrationBodyModel(username, password);
 
-        SuccessfulRegistrationResponseModel registrationResponse = step("Регистрация нового пользователя", () ->
-                given(baseRequestSpec)
-                        .body(registrationData)
-                        .when()
-                        .post("/users/register/")
-                        .then()
-                        .spec(successfulRegistrationResponseSpec)
-                        .extract()
-                        .as(SuccessfulRegistrationResponseModel.class)
-        );
+        SuccessfulRegistrationResponseModel firstRegistrationResponse = api.users.register(registrationData);
 
-        assertThat(registrationResponse.username()).isEqualTo(username);
+        assertThat(firstRegistrationResponse.username()).isEqualTo(username);
 
-        ExistingUserResponseModel response = step("Повторная регистрация с тем же username (ожидаем ошибку)", () ->
-                given(baseRequestSpec)
-                        .body(registrationData)
-                        .when()
-                        .post("/users/register/")
-                        .then()
-                        .spec(existingUserResponseSpec)
-                        .extract()
-                        .as(ExistingUserResponseModel.class)
-        );
+        ExistingUserResponseModel secondRegistrationResponse = api.users.registerExistingUser(registrationData);
 
         step("Проверка сообщения об ошибке при попытке регистрации существующего пользователя", () -> {
-            String actualError = response.username().getFirst();
+            String actualError = secondRegistrationResponse.username().getFirst();
             assertThat(actualError).isEqualTo(expectedError);
         });
     }
 
     @Test
+    @Description("POST /users/register/ с пустым username: возвращается ошибка валидации")
     @DisplayName("Попытка регистрации без username")
     @Tags({
             @Tag("regression"),
             @Tag("negative")
     })
+    @Severity(SeverityLevel.NORMAL)
     public void badRequestWhenUsernameMissingTest() {
 
-        ExistingUserResponseModel response = step(
-                "Регистрация нового пользователя без username", () ->
-                        given(baseRequestSpec)
-                                .body(new RegistrationBodyModel("", password))
-                                .when()
-                                .post("/users/register/")
-                                .then()
-                                .spec(existingUserResponseSpec)
-                                .extract()
-                                .as(ExistingUserResponseModel.class)
-        );
+        ExistingUserResponseModel response = api.users.registerUsernameMissing(password);
 
         step("Проверка сообщения об ошибке при попытки регистрации пользователя без username", () -> {
-            String actualError = response.username().getFirst();
+            String actualError = response.username().get(0);
             assertThat(actualError).isEqualTo(expectedErrorPass);
         });
     }
 
     @Test
+    @Description("POST /users/register/ с пустым password: возвращается ошибка валидации")
     @DisplayName("Попытка регистрации без password")
     @Tags({
             @Tag("regression"),
             @Tag("negative")
     })
+    @Severity(SeverityLevel.NORMAL)
     public void badRequestWhenPasswordMissingTest() {
-
-        ExistingPasswordResponseModel response = step(
-                "Регистрация нового пользователя без password", () ->
-                        given(baseRequestSpec)
-                                .body(new RegistrationBodyModel(username, ""))
-                                .when()
-                                .post("/users/register/")
-                                .then()
-                                .spec(existingPasswordResponseSpec)
-                                .extract()
-                                .as(ExistingPasswordResponseModel.class)
-        );
+        ExistingPasswordResponseModel response = api.users.registerPasswordMissing(username);
 
         step("Проверка сообщения об ошибке при попытки регистрации пользователя без password", () -> {
-            String actualError = response.password().getFirst();
+            String actualError = response.password().get(0);
             assertThat(actualError).isEqualTo(expectedErrorPass);
         });
     }
 
     @Test
+    @Description("POST /users/register/ с пустыми username и password: возвращаются ошибки валидации")
     @DisplayName("Попытка регистрации пользователя с пустыми username и password")
     @Tags({
             @Tag("regression"),
             @Tag("negative")
     })
+    @Severity(SeverityLevel.NORMAL)
     public void badRequestWhenBothFieldsMissingTest() {
 
-        ExistingNoParamResponseModel response = step(
-                "Регистрация нового пользователя без username и password", () ->
-                        given(baseRequestSpec)
-                                .body(new RegistrationBodyModel("", ""))
-                                .when()
-                                .post("/users/register/")
-                                .then()
-                                .spec(existingMissingResponseSpec)
-                                .extract()
-                                .as(ExistingNoParamResponseModel.class)
-        );
+        ExistingNoParamResponseModel response = api.users.registerBothMissing();
 
-        step("Проверка сообщения об ошибке при попытки регистрации пользователя без password", () -> {
+        step("Проверка сообщений об ошибках при попытке регистрации без username и password", () -> {
             String actualErrorPass = response.password().getFirst();
             String actualErrorName = response.username().getFirst();
             assertThat(actualErrorName).isEqualTo(expectedErrorPass);
